MetadataAPIZip/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <description>updated description for CSYS-76797: Data in this field is displayed on the client facing Project Credit Card Feed Request web form. But, the field label and help text will not display on there.

pick list changes must also be updated in the Territory Segment custom object: 
https://na4.salesforce.com/00N60000002XGzm?setupid=CustomObjects</description>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Admiralty Islands</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Ajman</fullName>
                </value>
                <value>
                    <fullName>Al Ain</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ascension Island</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_St_Line_2__c</fullName>
        <description>updated description for CSYS-76797: Data in this field is displayed on the client facing Project Credit Card Feed Request web form. But, the field label and help text will not display on there.</description>
        <label>Billing St Line 2</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_St__c</fullName>
        <description>updated description for CSYS-76797: Data in this field is displayed on the client facing Project Credit Card Feed Request web form. But, the field label and help text will not display on there.</description>
        <label>Billing St</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <description>updated description for CSYS-76797: Data in this field is displayed on the client facing Project Credit Card Feed Request web form. But, the field label and help text will not display on there.</description>
        <label>Billing State/Province</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOSAO__SecondAccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the 2nd Account Owner Field i.e., NOT to be added to the Page Layout</description>
        <inlineHelpText>Syncs to Gainsight.</inlineHelpText>
        <label>SecondAccountOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>SMB_BU</fullName>
        <active>true</active>
        <description>For SMB Profiles Only includes MDRs, RSEs, AMs, CD sales</description>
        <label>SMB BU</label>
    </recordTypes>
    <sharingModel>Private</sharingModel> 
</CustomObject>